S3 connection added and UX improved